# openbb-agents

./: .gitignore  .pre-commit-config.yaml  README.md  getting_started.ipynb  langchain-tool-retrieval.ipynb  main.py  openbb-agent.ipynb  openbb_agent.py  pyproject.toml  run.py  utils.py
.github/workflows/: lint.yml  publish.yml  test.yml
openbb_agents/: __init__.py  agent.py  chains.py  models.py  prompts.py  testing.py  tools.py  utils.py
openbb_agents/agents/: chains.py  prompts.py  utils.py
openbb_agents/agents/v1/: __init__.py  agent.py
openbb_agents/agents/v2/: agent.py
tests/: conftest.py  test_agent.py  test_chains.py  test_tools.py
