[tool.poetry]
name = "openbb-agents"
version = "0.0.1"
description = "LLMs X OpenBB"
authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
jupyterlab = "^4.0.9"
langchain = "^0.1"
openbb = "4.1.0"
openai = "^1.3.5"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
langchainhub = "^0.1.14"
python-json-logger = "^2.0.7"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
matplotlib = "^3.8.2"
openbb-charting = "^1.0.0"
langchain-openai = "^0.0.2.post1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.7"
pytest = "^7.4.3"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

