[tool.poetry]
name = "openbb-agents"
version = "0.0.1"
description = "LLMs X OpenBB"
authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
jupyterlab = "^4.0.9"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
magentic = {extras = ["litellm"], version = "^0.23.0"}
pydantic = "2.7.1"
openbb = "4.1.7"
langchain = "^0.1.17"
langchain-community = "^0.0.37"
langchain-openai = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ruff = ">=0.1.6"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
